Fix wrong font import

--- a/style.css
+++ b/style.css
@@ -13,6 +13,6 @@
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Mulish', sans-serif;
     line-height: 1.6;
 }
